Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp204:3": "pouzdan čovek najbolji je srodnik, ",
   "dhp204:4": "smirenje najveća sreća. ",
   "dhp205:1": "Ko oseti slast samoće ",
-  "dhp205:2": "i slast spokojstva, "
+  "dhp205:2": "i slast spokojstva, ",
+  "dhp205:3": "takav, lišen straha i bez zlodela, "
 }
