--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp204:4": "smirenje najveća sreća. ",
   "dhp205:1": "Ko oseti slast samoće ",
   "dhp205:2": "i slast spokojstva, ",
-  "dhp205:3": "takav, lišen straha i bez zlodela, "
+  "dhp205:3": "takav, lišen straha i bez zlodela, ",
+  "dhp205:4": "i nektar Dhamme ispija. "
 }
