Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp205:1": "Ko oseti slast samoće ",
   "dhp205:2": "i slast spokojstva, ",
   "dhp205:3": "takav, lišen straha i bez zlodela, ",
-  "dhp205:4": "i nektar Dhamme ispija. "
+  "dhp205:4": "i nektar Dhamme ispija. ",
+  "dhp206:1": "Dobro je videti Plemenite, "
 }
