Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp205:2": "i slast spokojstva, ",
   "dhp205:3": "takav, lišen straha i bez zlodela, ",
   "dhp205:4": "i nektar Dhamme ispija. ",
-  "dhp206:1": "Dobro je videti Plemenite, "
+  "dhp206:1": "Dobro je videti Plemenite, ",
+  "dhp206:2": "sreća sa njima biti, "
 }
