--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp205:3": "takav, lišen straha i bez zlodela, ",
   "dhp205:4": "i nektar Dhamme ispija. ",
   "dhp206:1": "Dobro je videti Plemenite, ",
-  "dhp206:2": "sreća sa njima biti, "
+  "dhp206:2": "sreća sa njima biti, ",
+  "dhp206:3": "ko ne gleda budale "
 }
