Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp206:1": "Dobro je videti Plemenite, ",
   "dhp206:2": "sreća sa njima biti, ",
   "dhp206:3": "ko ne gleda budale ",
-  "dhp206:4": "trajno je srećan. "
+  "dhp206:4": "trajno je srećan. ",
+  "dhp207:1": "Za onog ko sa budalama živi, "
 }
