--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp206:2": "sreća sa njima biti, ",
   "dhp206:3": "ko ne gleda budale ",
   "dhp206:4": "trajno je srećan. ",
-  "dhp207:1": "Za onog ko sa budalama živi, "
+  "dhp207:1": "Za onog ko sa budalama živi, ",
+  "dhp207:2": "patnjama nikad kraja, "
 }
