--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp206:3": "ko ne gleda budale ",
   "dhp206:4": "trajno je srećan. ",
   "dhp207:1": "Za onog ko sa budalama živi, ",
-  "dhp207:2": "patnjama nikad kraja, "
+  "dhp207:2": "patnjama nikad kraja, ",
+  "dhp207:3": "druženje sa budalom uvek je bolno "
 }
