Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp207:1": "Za onog ko sa budalama živi, ",
   "dhp207:2": "patnjama nikad kraja, ",
   "dhp207:3": "druženje sa budalom uvek je bolno ",
-  "dhp207:4": "- baš kao sa neprijateljem, "
+  "dhp207:4": "- baš kao sa neprijateljem, ",
+  "dhp207:5": "ali biti sa mudrim je radost, "
 }
