--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp207:2": "patnjama nikad kraja, ",
   "dhp207:3": "druženje sa budalom uvek je bolno ",
   "dhp207:4": "- baš kao sa neprijateljem, ",
-  "dhp207:5": "ali biti sa mudrim je radost, "
+  "dhp207:5": "ali biti sa mudrim je radost, ",
+  "dhp207:6": "baš kao susret sa srodnikom. "
 }
