Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp207:3": "druženje sa budalom uvek je bolno ",
   "dhp207:4": "- baš kao sa neprijateljem, ",
   "dhp207:5": "ali biti sa mudrim je radost, ",
-  "dhp207:6": "baš kao susret sa srodnikom. "
+  "dhp207:6": "baš kao susret sa srodnikom. ",
+  "dhp208:1": "Zato, "
 }
