--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp207:4": "- baš kao sa neprijateljem, ",
   "dhp207:5": "ali biti sa mudrim je radost, ",
   "dhp207:6": "baš kao susret sa srodnikom. ",
-  "dhp208:1": "Zato, sa mudrim, znalcem, upućenim, "
+  "dhp208:1": "Zato, sa mudrim, znalcem, upućenim, ",
+  "dhp208:2": "punim vrline, predanim i plemenitim, "
 }
