Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp207:5": "ali biti sa mudrim je radost, ",
   "dhp207:6": "baš kao susret sa srodnikom. ",
   "dhp208:1": "Zato, sa mudrim, znalcem, upućenim, ",
-  "dhp208:2": "punim vrline, predanim i plemenitim, "
+  "dhp208:2": "punim vrline, predanim i plemenitim, ",
+  "dhp208:3": "sa takvim istinskim bićem, mudracem družite se, "
 }
