--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -50,7 +50,7 @@
   "dhp207:6": "baš kao susret sa srodnikom. ",
   "dhp208:1": "Zato, sa mudrim, znalcem, upućenim, ",
   "dhp208:2": "punim vrline, predanim i plemenitim, ",
-  "dhp208:3": "sa takvim istinskim bićem, mudracem družite se, ",
+  "dhp208:3": "",
   "dhp208:4": "",
   "dhp208:6": "baš kao što Mesec sledi put zvezda. "
 }
