Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -49,7 +49,7 @@
   "dhp207:5": "ali biti sa mudrim je radost, ",
   "dhp207:6": "baš kao susret sa srodnikom. ",
   "dhp208:1": "Zato, ",
-  "dhp208:2": "punim vrline, predanim i plemenitim, ",
+  "dhp208:2": "sa mudrim, znalcem, upućenim, ",
   "dhp208:3": "",
   "dhp208:4": "",
   "dhp208:6": "baš kao što Mesec sledi put zvezda. "
