--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -51,6 +51,6 @@
   "dhp208:1": "Zato, ",
   "dhp208:2": "sa mudrim, znalcem, upućenim, ",
   "dhp208:3": "punim vrline, predanim i plemenitim, ",
-  "dhp208:4": "",
+  "dhp208:4": "sa takvim istinskim bićem, ",
   "dhp208:6": "baš kao što Mesec sledi put zvezda. "
 }
