Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp197-208_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp208:2": "sa mudrim, znalcem, upućenim, ",
   "dhp208:3": "punim vrline, predanim i plemenitim, ",
   "dhp208:4": "sa takvim istinskim bićem, ",
+  "dhp208:5": "mudracem družite se, ",
   "dhp208:6": "baš kao što Mesec sledi put zvezda. "
 }
