Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp209:0.1": "Kratka zbirka Budnih govora ",
-  "dhp209:0.2": "Reči mudrosti "
+  "dhp209:0.2": "Reči mudrosti ",
+  "dhp209:0.3": "Naklonost "
 }
