--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp209:0.1": "Kratka zbirka Budnih govora ",
   "dhp209:0.2": "Reči mudrosti ",
-  "dhp209:0.3": "Naklonost "
+  "dhp209:0.3": "Naklonost ",
+  "dhp209:1": "Ko čini ono što ne treba, "
 }
