Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp209:0.3": "Naklonost ",
   "dhp209:1": "Ko čini ono što ne treba, ",
   "dhp209:2": "a ne ono što treba, ",
-  "dhp209:3": "dobru leđa okrenuvši, za užitkom juri, "
+  "dhp209:3": "dobru leđa okrenuvši, za užitkom juri, ",
+  "dhp209:4": "a obuzdanima zavidi. "
 }
