Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp209:1": "Ko čini ono što ne treba, ",
   "dhp209:2": "a ne ono što treba, ",
   "dhp209:3": "dobru leđa okrenuvši, za užitkom juri, ",
-  "dhp209:4": "a obuzdanima zavidi. "
+  "dhp209:4": "a obuzdanima zavidi. ",
+  "dhp210:1": "Ne združuj se nikad sa dragim, "
 }
