--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp209:3": "dobru leđa okrenuvši, za užitkom juri, ",
   "dhp209:4": "a obuzdanima zavidi. ",
   "dhp210:1": "Ne združuj se nikad sa dragim, ",
-  "dhp210:2": "baš kao ni s nedragim, "
+  "dhp210:2": "baš kao ni s nedragim, ",
+  "dhp210:3": "ne videti dragog jeste patnja, "
 }
