Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp209:4": "a obuzdanima zavidi. ",
   "dhp210:1": "Ne združuj se nikad sa dragim, ",
   "dhp210:2": "baš kao ni s nedragim, ",
-  "dhp210:3": "ne videti dragog jeste patnja, "
+  "dhp210:3": "ne videti dragog jeste patnja, ",
+  "dhp210:4": "biti sa nedragim takođe. "
 }
