Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp210:1": "Ne združuj se nikad sa dragim, ",
   "dhp210:2": "baš kao ni s nedragim, ",
   "dhp210:3": "ne videti dragog jeste patnja, ",
-  "dhp210:4": "biti sa nedragim takođe. "
+  "dhp210:4": "biti sa nedragim takođe. ",
+  "dhp211:1": "Zato ne čini ništa sebi dragim, "
 }
