Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dhp210:3": "ne videti dragog jeste patnja, ",
   "dhp210:4": "biti sa nedragim takođe. ",
   "dhp211:1": "Zato ne čini ništa sebi dragim, ",
-  "dhp211:2": "bolno je od dragog rastati se, "
+  "dhp211:2": "bolno je od dragog rastati se, ",
+  "dhp211:3": "nema okova za one "
 }
