Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp210:4": "biti sa nedragim takođe. ",
   "dhp211:1": "Zato ne čini ništa sebi dragim, ",
   "dhp211:2": "bolno je od dragog rastati se, ",
-  "dhp211:3": "nema okova za one "
+  "dhp211:3": "nema okova za one ",
+  "dhp211:4": "koji nadiđoše i drago i nedrago. "
 }
