--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -33,5 +33,6 @@
   "sn22.89:11.2": "In un'altra occasione sta osservando il sorgere e svanire delle cinque cataste ardenti- ",
   "sn22.89:11.3": "cosi' e' la materia, cosi' e' l'origine della materia, cosi' e' lo svanire ",
   "sn22.89:11.8": "quando contempla vedendo il sorgere e svanire in queste cinque cataste ardenti, qualsiasi cosa e' residua nelle cinque cataste ardenti circa concetto \"io sono,\" desiderio 'io sono', o tendenza  \"io sono,\" e' eradicato, e uno va verso l'eradicazione. ",
-  "sn22.89:12.1": "E' come una stoffa macchiata e sporca che dei padroni dessero al lavandaio "
+  "sn22.89:12.1": "E' come una stoffa macchiata e sporca che dei padroni dessero al lavandaio ",
+  "sn22.89:12.2": "Quel lavandaio dopo averlo sfregato con della potassa, lisciva, o sterco di vacca, lo risciacqua con dell'acqua limpida. "
 }
