Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -35,5 +35,6 @@
   "sn22.89:11.8": "quando contempla vedendo il sorgere e svanire in queste cinque cataste ardenti, qualsiasi cosa e' residua nelle cinque cataste ardenti circa concetto \"io sono,\" desiderio 'io sono', o tendenza  \"io sono,\" e' eradicato, e uno va verso l'eradicazione. ",
   "sn22.89:12.1": "E' come una stoffa macchiata e sporca che dei padroni dessero al lavandaio ",
   "sn22.89:12.2": "Quel lavandaio dopo averlo sfregato con della potassa, lisciva, o sterco di vacca, lo risciacqua con dell'acqua limpida. ",
-  "sn22.89:12.3": "Quando questa macchia è stata pulita e purificata, allora per quello straccio c'è un solo residuo e l'odore della potassa, della lisciva o dello sterco di vacca non e' stato sradicato. "
+  "sn22.89:12.3": "Quando questa macchia è stata pulita e purificata, allora per quello straccio c'è un solo residuo e l'odore della potassa, della lisciva o dello sterco di vacca non e' stato sradicato. ",
+  "sn22.89:12.4": "quel lavandaio da ai padroni questo. i padroni buttano giu' nel cesto di vimini pervado dall'odore. "
 }
