--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "mn122:9.10": "In diesem Fall versteht er: ",
   "mn122:9.11": "‚Ich richte meinen Geist auf das Unbewegte aus, aber mein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
   "mn122:9.12": "So ist er sich der Lage bewusst. ",
-  "mn122:10.1": "Dann soll dieser Mönch seinen Geist innerlich stillen, sich setzen, eins werden und im Samādhi versinken lassen, indem er das gleiche Meditationsthema als Grundlage für die Versenkung benutzt wie zuvor. "
+  "mn122:10.1": "Dann soll dieser Mönch seinen Geist innerlich stillen, sich setzen, eins werden und im Samādhi versinken lassen, indem er das gleiche Meditationsthema als Grundlage für die Versenkung benutzt wie zuvor. ",
+  "mn122:10.2": "Er richtet den Geist innerlich auf Leerheit aus, "
 }
