--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "mn122:9.12": "So ist er sich der Lage bewusst. ",
   "mn122:10.1": "Dann soll dieser Mönch seinen Geist innerlich stillen, sich setzen, eins werden und im Samādhi versinken lassen, indem er das gleiche Meditationsthema als Grundlage für die Versenkung benutzt wie zuvor. ",
   "mn122:10.2": "Er richtet den Geist innerlich auf Leerheit aus, ",
-  "mn122:10.3": "und sein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen. "
+  "mn122:10.3": "und sein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen. ",
+  "mn122:10.4": "In diesem Fall versteht er: "
 }
