Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "mn122:10.2": "Er richtet den Geist innerlich auf Leerheit aus, ",
   "mn122:10.3": "und sein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen. ",
   "mn122:10.4": "In diesem Fall versteht er: ",
-  "mn122:10.5": "‚Ich richte meinen Geist innerlich auf Leerheit aus, und mein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen.‘ "
+  "mn122:10.5": "‚Ich richte meinen Geist innerlich auf Leerheit aus, und mein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
+  "mn122:10.6": "So ist sie sich der Lage bewusst. "
 }
