--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "mn122:10.7": "Er richtet den Geist äußerlich auf Leerheit aus … ",
   "mn122:10.8": "Er richtet den Geist innerlich und äußerlich auf Leerheit aus … ",
   "mn122:10.9": "Er richtet den Geist auf das Unbewegte aus, ",
-  "mn122:10.10": "und sein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen. "
+  "mn122:10.10": "und sein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen. ",
+  "mn122:10.11": "In diesem Fall versteht er: "
 }
