--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn122:10.9": "Er richtet den Geist auf das Unbewegte aus, ",
   "mn122:10.10": "und sein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen. ",
   "mn122:10.11": "In diesem Fall versteht er: ",
-  "mn122:10.12": "‚Ich richte meinen Geist auf das Unbewegte aus, und mein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen.‘ "
+  "mn122:10.12": "‚Ich richte meinen Geist auf das Unbewegte aus, und mein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
+  "mn122:10.13": "So ist sie sich der Lage bewusst. "
 }
