--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "mn122:10.11": "In diesem Fall versteht er: ",
   "mn122:10.12": "‚Ich richte meinen Geist auf das Unbewegte aus, und mein Geist ist diesbezüglich begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
   "mn122:10.13": "So ist sie sich der Lage bewusst. ",
-  "mn122:11.1": "Während ein Mönch diese Meditation übt, geht er, wenn sein Geist zum Gehen geneigt ist, im Gedanken: "
+  "mn122:11.1": "Während ein Mönch diese Meditation übt, geht er, wenn sein Geist zum Gehen geneigt ist, im Gedanken: ",
+  "mn122:11.2": "‚Während ich gehe, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ "
 }
