--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn122:11.2": "‚Während ich gehe, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ ",
   "mn122:11.3": "So ist sie sich der Lage bewusst. ",
   "mn122:11.4": "Während ein Mönch diese Meditation übt, steht er, wenn sein Geist zum Stehen geneigt ist, im Gedanken: ",
-  "mn122:11.5": "‚Während ich stehe, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ "
+  "mn122:11.5": "‚Während ich stehe, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ ",
+  "mn122:11.6": "So ist sie sich der Lage bewusst. "
 }
