--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn122:11.5": "‚Während ich stehe, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ ",
   "mn122:11.6": "So ist sie sich der Lage bewusst. ",
   "mn122:11.7": "Während ein Mönch diese Meditation übt, sitzt er, wenn sein Geist zum Sitzen geneigt ist, im Gedanken: ",
-  "mn122:11.8": "‚Während ich sitze, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ "
+  "mn122:11.8": "‚Während ich sitze, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ ",
+  "mn122:11.9": "So ist sie sich der Lage bewusst. "
 }
