--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "mn122:11.6": "So ist sie sich der Lage bewusst. ",
   "mn122:11.7": "Während ein Mönch diese Meditation übt, sitzt er, wenn sein Geist zum Sitzen geneigt ist, im Gedanken: ",
   "mn122:11.8": "‚Während ich sitze, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ ",
-  "mn122:11.9": "So ist sie sich der Lage bewusst. "
+  "mn122:11.9": "So ist sie sich der Lage bewusst. ",
+  "mn122:11.10": "Während ein Mönch diese Meditation übt, liegt er, wenn sein Geist zum Liegen geneigt ist, im Gedanken: "
 }
