Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -81,5 +81,6 @@
   "mn122:13.2": "‚Ich werde keine Gedanken denken, die nieder, derb, gewöhnlich, unedel und sinnlos sind, die nicht zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen führen: nämlich sinnliche, boshafte oder grausame Gedanken.‘ ",
   "mn122:13.3": "So ist sie sich der Lage bewusst. ",
   "mn122:13.4": "‚Aber ich will solche Gedanken denken, die edel sind, unabhängig machen und den, der sie übt, zur völligen Auflösung des Leidens führen: nämlich entsagende, wohlwollende und mildherzige Gedanken.‘ ",
-  "mn122:13.5": "So ist sie sich der Lage bewusst. "
+  "mn122:13.5": "So ist sie sich der Lage bewusst. ",
+  "mn122:14.1": "Es gibt fünf Arten sinnlicher Erregung. "
 }
