Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "mn122:13.3": "So ist sie sich der Lage bewusst. ",
   "mn122:13.4": "‚Aber ich will solche Gedanken denken, die edel sind, unabhängig machen und den, der sie übt, zur völligen Auflösung des Leidens führen: nämlich entsagende, wohlwollende und mildherzige Gedanken.‘ ",
   "mn122:13.5": "So ist sie sich der Lage bewusst. ",
-  "mn122:14.1": "Es gibt fünf Arten sinnlicher Erregung. "
+  "mn122:14.1": "Es gibt fünf Arten sinnlicher Erregung. ",
+  "mn122:14.2": "Welche fünf? "
 }
