Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -84,6 +84,6 @@
   "mn122:13.5": "So ist sie sich der Lage bewusst. ",
   "mn122:14.1": "Es gibt fünf Arten sinnlicher Erregung. ",
   "mn122:14.2": "Welche fünf? ",
-  "mn122:14.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "mn122:14.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend; ",
   "mn122:14.4": "Töne, die das Ohr erkennt … "
 }
