--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -86,5 +86,6 @@
   "mn122:14.2": "Welche fünf? ",
   "mn122:14.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend; ",
   "mn122:14.4": "Töne, die das Ohr erkennt … ",
-  "mn122:14.5": "Düfte, die die Nase erkennt … "
+  "mn122:14.5": "Düfte, die die Nase erkennt … ",
+  "mn122:14.6": "Geschmäcke, die die Zunge erkennt … "
 }
