--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -89,5 +89,6 @@
   "mn122:14.5": "Düfte, die die Nase erkennt … ",
   "mn122:14.6": "Geschmäcke, die die Zunge erkennt … ",
   "mn122:14.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "mn122:14.8": "Das sind die fünf Arten sinnlicher Erregung. "
+  "mn122:14.8": "Das sind die fünf Arten sinnlicher Erregung. ",
+  "mn122:15.1": "Daher sollt ihr euren eigenen Geist regelmäßig prüfen: "
 }
