--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "sn22.89:1.1": "A un certo punto si trovavano a Kosambī, nel Parco di Ghosita, molti cercatori anziani. ",
-  "sn22.89:1.2": "In quell’occasione il Venerabile Khemako era infermo, afflitto, e molto ammalato nel Parco di Giuggiole. ",
+  "sn22.89:1.2": "Allo stesso tempo il Venerabile Khemako che si trovava nel Parco di Giuggiole era infermo, afflitto, e molto ammalato. ",
   "sn22.89:1.3": "Molti cercatori anziani nel tardo pomeriggio, emersi/usciti dalla solitudine/isolamento, dissero al Venerabile Dāsaka: ",
   "sn22.89:1.4": "Vieni, amico Dāsaka, vai dal cercatore Khemako e digli: ",
   "sn22.89:1.5": "‘Gli anziani, amico Khemako, hanno detto questo: ",
