Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -91,5 +91,6 @@
   "mn122:14.7": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "mn122:14.8": "Das sind die fünf Arten sinnlicher Erregung. ",
   "mn122:15.1": "Daher sollt ihr euren eigenen Geist regelmäßig prüfen: ",
-  "mn122:15.2": "‚Hat mein Geist Interesse an irgendeiner dieser fünf Arten sinnlicher Erregung?‘ "
+  "mn122:15.2": "‚Hat mein Geist Interesse an irgendeiner dieser fünf Arten sinnlicher Erregung?‘ ",
+  "mn122:15.3": "Wenn er beim Prüfen feststellen würde: "
 }
