Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -93,5 +93,6 @@
   "mn122:15.1": "Daher sollt ihr euren eigenen Geist regelmäßig prüfen: ",
   "mn122:15.2": "‚Hat mein Geist Interesse an irgendeiner dieser fünf Arten sinnlicher Erregung?‘ ",
   "mn122:15.3": "Wenn er beim Prüfen feststellen würde: ",
-  "mn122:15.4": "‚Mein Geist hat Interesse daran‘, "
+  "mn122:15.4": "‚Mein Geist hat Interesse daran‘, ",
+  "mn122:15.5": "dann versteht er in diesem Fall: "
 }
