--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "mn122:15.2": "‚Hat mein Geist Interesse an irgendeiner dieser fünf Arten sinnlicher Erregung?‘ ",
   "mn122:15.3": "Wenn er beim Prüfen feststellen würde: ",
   "mn122:15.4": "‚Mein Geist hat Interesse daran‘, ",
-  "mn122:15.5": "dann versteht er in diesem Fall: "
+  "mn122:15.5": "dann versteht er in diesem Fall: ",
+  "mn122:15.6": "‚Ich habe Sehnen und Verlangen nach den fünf Arten sinnlicher Erregung nicht aufgegeben.‘ "
 }
