--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -79,7 +79,7 @@
   "mn122:12.5": "So ist sie sich der Lage bewusst. ",
   "mn122:13.1": "Während ein Mönch diese Meditation übt, denkt er, wenn sein Geist zum Denken geneigt ist: ",
   "mn122:13.2": "‚Ich werde keine Gedanken denken, die nieder, derb, gewöhnlich, unedel und sinnlos sind, die nicht zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen führen: nämlich sinnliche, boshafte oder grausame Gedanken.‘ ",
-  "mn122:13.3": "So ist sie sich der Lage bewusst. ",
+  "mn122:13.3": "So ist er sich der Lage bewusst. ",
   "mn122:13.4": "‚Aber ich will solche Gedanken denken, die edel sind, unabhängig machen und den, der sie übt, zur völligen Auflösung des Leidens führen: nämlich entsagende, wohlwollende und mildherzige Gedanken.‘ ",
   "mn122:13.5": "So ist sie sich der Lage bewusst. ",
   "mn122:14.1": "Es gibt fünf Arten sinnlicher Erregung. ",
