--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -71,7 +71,7 @@
   "mn122:11.9": "So ist er sich der Lage bewusst. ",
   "mn122:11.10": "Während ein Mönch diese Meditation übt, liegt er, wenn sein Geist zum Liegen geneigt ist, im Gedanken: ",
   "mn122:11.11": "‚Während ich liege, werden mich schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit nicht überwältigen.‘ ",
-  "mn122:11.12": "So ist sie sich der Lage bewusst. ",
+  "mn122:11.12": "So ist er sich der Lage bewusst. ",
   "mn122:12.1": "Während ein Mönch diese Meditation übt, denkt er, wenn sein Geist zum Reden geneigt ist: ",
   "mn122:12.2": "‚Ich werde mich nicht auf Gespräche einlassen, die nieder, derb, gewöhnlich, unedel und sinnlos sind, die nicht zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen führen: nämlich Gespräche über Könige, Räuber und Minister, über Heere, Bedrohungen und Kriege, über Essen, Trinken, Kleider und Schlafstellen, über Kränze und Düfte, über die Familie, Fahrzeuge, Dörfer, Marktflecken, Städte und Länder, über Frauen und Helden, Straßen- und Brunnengespräch, Gespräch über Verstorbene, über allerlei Dinge, Geschichten vom Land und vom Meer und Gespräche über Wiedergeburt in diesem oder jenem Daseinszustand.‘ ",
   "mn122:12.3": "So ist sie sich der Lage bewusst. ",
