--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -96,5 +96,6 @@
   "mn122:15.4": "‚Mein Geist hat Interesse daran‘, ",
   "mn122:15.5": "dann versteht er in diesem Fall: ",
   "mn122:15.6": "‚Ich habe Sehnen und Verlangen nach den fünf Arten sinnlicher Erregung nicht aufgegeben.‘ ",
-  "mn122:15.7": "So ist er sich der Lage bewusst. "
+  "mn122:15.7": "So ist er sich der Lage bewusst. ",
+  "mn122:15.8": "Doch wenn er beim Prüfen feststellen würde: "
 }
