--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -99,5 +99,6 @@
   "mn122:15.7": "So ist er sich der Lage bewusst. ",
   "mn122:15.8": "Doch wenn er beim Prüfen feststellen würde: ",
   "mn122:15.9": "‚Mein Geist hat kein Interesse daran‘, ",
-  "mn122:15.10": "dann versteht er in diesem Fall: "
+  "mn122:15.10": "dann versteht er in diesem Fall: ",
+  "mn122:15.11": "‚Ich habe Sehnen und Verlangen nach den fünf Arten sinnlicher Erregung aufgegeben.‘ "
 }
