--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -9,7 +9,7 @@
   "sn22.89:1.10": "No, amico, non è tollerabile, né sopportabile.... ",
   "sn22.89:2.6": "Amico, il Buddha ci ha detto che ci sono cinque cataste ardenti ",
   "sn22.89:2.7": "(fatte di) materia, sensazioni, percezioni, conformazioni, coscienza. ",
-  "sn22.89:2.8": "il Venerabile Khemako pensa di essere o di possedere queste cinque cataste ardenti? ",
+  "sn22.89:2.8": "il Venerabile Khemako pensa di essere, o di possedere, queste cinque cataste ardenti? ",
   "sn22.89:3.8": "Amico, io certamente non vedo in queste cinque cataste ardenti un qualcosa che sia io o ne' che mi appartenga ",
   "sn22.89:4.10": "Abbiamo sentito che il Venerabile Khemako non vede in queste cinque cataste ardenti un proprio se ne' le prende come proprie. ",
   "sn22.89:4.11": "In quel caso il venerabile Khemako è un Arahant, ha distrutto gli impulsi (asava). ",
