Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -101,5 +101,6 @@
   "mn122:15.9": "‚Mein Geist hat kein Interesse daran‘, ",
   "mn122:15.10": "dann versteht er in diesem Fall: ",
   "mn122:15.11": "‚Ich habe Sehnen und Verlangen nach den fünf Arten sinnlicher Erregung aufgegeben.‘ ",
-  "mn122:15.12": "So ist er sich der Lage bewusst. "
+  "mn122:15.12": "So ist er sich der Lage bewusst. ",
+  "mn122:16.1": "Ein Mönch soll meditieren, indem er das Entstehen und Vergehen bei diesen fünf mit Ergreifen verbundenen Aggregaten beobachtet: "
 }
