--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -104,5 +104,6 @@
   "mn122:15.12": "So ist er sich der Lage bewusst. ",
   "mn122:16.1": "Ein Mönch soll meditieren, indem er das Entstehen und Vergehen bei diesen fünf mit Ergreifen verbundenen Aggregaten beobachtet: ",
   "mn122:16.2": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
-  "mn122:16.3": "So ist Gefühl … "
+  "mn122:16.3": "So ist Gefühl … ",
+  "mn122:16.4": "So ist Wahrnehmung … "
 }
