--- a/translation/en/sujato/sutta/dn/dn29_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn29_translation-en-sujato.json
@@ -420,7 +420,7 @@
   "dn29:38.2": "The self is has form and is well after death, ",
   "dn29:38.3": "and say, ",
   "dn29:38.4": "‘Reverends, is this what you say, ",
-  "dn29:38.5": "“The self is has form and is well after death”?’ ",
+  "dn29:38.5": "“The self is has form and is free of disease after death”?’ ",
   "dn29:38.6": "But when they say, ‘Yes! ",
   "dn29:38.7": "This is the only truth, other ideas are silly,’ ",
   "dn29:38.8": "I don’t acknowledge that. ",
