--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -106,5 +106,6 @@
   "mn122:16.2": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
   "mn122:16.3": "So ist Gefühl … ",
   "mn122:16.4": "So ist Wahrnehmung … ",
-  "mn122:16.5": "So sind Entscheidungen … "
+  "mn122:16.5": "So sind Entscheidungen … ",
+  "mn122:16.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
 }
