--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -107,5 +107,6 @@
   "mn122:16.3": "So ist Gefühl … ",
   "mn122:16.4": "So ist Wahrnehmung … ",
   "mn122:16.5": "So sind Entscheidungen … ",
-  "mn122:16.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
+  "mn122:16.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
+  "mn122:17.1": "Während er das tut, gibt er die Einbildung ‚ich bin‘ bezüglich der fünf mit Ergreifen verbundenen Aggregate auf. "
 }
