--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "mn122:16.5": "So sind Entscheidungen … ",
   "mn122:16.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
   "mn122:17.1": "Während er das tut, gibt er die Einbildung ‚ich bin‘ bezüglich der fünf mit Ergreifen verbundenen Aggregate auf. ",
-  "mn122:17.2": "In diesem Fall versteht er: "
+  "mn122:17.2": "In diesem Fall versteht er: ",
+  "mn122:17.3": "‚Ich habe die Einbildung „ich bin“ bezüglich der fünf mit Ergreifen verbundenen Aggregate aufgegeben.‘ "
 }
