--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -112,5 +112,6 @@
   "mn122:17.2": "In diesem Fall versteht er: ",
   "mn122:17.3": "‚Ich habe die Einbildung „ich bin“ bezüglich der fünf mit Ergreifen verbundenen Aggregate aufgegeben.‘ ",
   "mn122:17.4": "So ist er sich der Lage bewusst. ",
-  "mn122:18.1": "Diese Grundsätze sind einzig tauglich mit tauglichen Auswirkungen; sie sind edel, überweltlich und für den Bösen nicht zugänglich. "
+  "mn122:18.1": "Diese Grundsätze sind einzig tauglich mit tauglichen Auswirkungen; sie sind edel, überweltlich und für den Bösen nicht zugänglich. ",
+  "mn122:19.1": "Was denkst du, Ānanda? "
 }
