--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -113,5 +113,6 @@
   "mn122:17.3": "‚Ich habe die Einbildung „ich bin“ bezüglich der fünf mit Ergreifen verbundenen Aggregate aufgegeben.‘ ",
   "mn122:17.4": "So ist er sich der Lage bewusst. ",
   "mn122:18.1": "Diese Grundsätze sind einzig tauglich mit tauglichen Auswirkungen; sie sind edel, überweltlich und für den Bösen nicht zugänglich. ",
-  "mn122:19.1": "Was denkst du, Ānanda? "
+  "mn122:19.1": "Was denkst du, Ānanda? ",
+  "mn122:19.2": "Welchen Vorteil würde ein Schüler darin sehen, sich dem Lehrer anzuschließen, selbst wenn der ihn wegschickt?“ "
 }
