Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -114,6 +114,6 @@
   "mn122:17.4": "So ist er sich der Lage bewusst. ",
   "mn122:18.1": "Diese Grundsätze sind einzig tauglich mit tauglichen Auswirkungen; sie sind edel, überweltlich und für den Bösen nicht zugänglich. ",
   "mn122:19.1": "Was denkst du, Ānanda? ",
-  "mn122:19.2": "Welchen Vorteil würde ein Schüler darin sehen, sich dem Lehrer anzuschließen, selbst wenn der ihn wegschickt?“ ",
+  "mn122:19.2": "Welchen Vorteil würde ein Schüler sehen, dass er es für wert hielte, sich dem Lehrer anzuschließen, selbst wenn der ihn wegschickt?“ ",
   "mn122:19.3": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ "
 }
