Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -15,7 +15,7 @@
   "sn22.89:4.11": "In quel caso il venerabile Khemako è un Arahant, ha distrutto gli impulsi (asava). ",
   "sn22.89:5.8": "Amico, di sicuro io non vedo nulla in queste cinque cataste ardenti che sia quello che sono o che mi appartenga, ma non sono un arahant che ha distrutto gli impulsi, ",
   "sn22.89:5.9": "nonostante io non veda nemmeno un attitudine a dire \"Io esisto\" o \"questo sono io\" riguardo queste cinque cataste ardenti. ",
-  "sn22.89:7.3": "questo che dici \"io sono\",  che cos'e' che dici \"io sono\"? ",
+  "sn22.89:7.3": "quando dici \"io sono\",  a cosa ti riferisci quando dici \"io sono\"? ",
   "sn22.89:7.4": "Dici sono la materia, o dici sono un'altra materia? ",
   "sn22.89:8.10": "Basta, amico Dāsaka, cos'e' questo gioco di andare e venire? ",
   "sn22.89:8.11": "reggendomi su un bastone ??? ",
