--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -115,5 +115,6 @@
   "mn122:18.1": "Diese Grundsätze sind einzig tauglich mit tauglichen Auswirkungen; sie sind edel, überweltlich und für den Bösen nicht zugänglich. ",
   "mn122:19.1": "Was denkst du, Ānanda? ",
   "mn122:19.2": "Welchen Vorteil würde ein Schüler sehen, dass er es für wert hielte, sich dem Lehrer anzuschließen, selbst wenn der ihn wegschickt?“ ",
-  "mn122:19.3": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ "
+  "mn122:19.3": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ ",
+  "mn122:20.1": "„Ein Schüler soll es nicht für wert halten, sich um Aussagen, Mischungen aus Prosa und Dichtung oder um Gesprächen willen dem Lehrer anzuschließen. "
 }
