--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -16,7 +16,7 @@
   "sn22.89:5.8": "Amico, di sicuro io non vedo nulla in queste cinque cataste ardenti che sia quello che sono o che mi appartenga, ma non sono un arahant che ha distrutto gli impulsi, ",
   "sn22.89:5.9": "nonostante io non veda nemmeno un attitudine a dire \"Io esisto\" o \"questo sono io\" riguardo queste cinque cataste ardenti. ",
   "sn22.89:7.3": "quando dici \"io sono\",  a cosa ti riferisci quando dici \"io sono\"? ",
-  "sn22.89:7.4": "Dici sono la materia, o dici sono separato dalla materia? ",
+  "sn22.89:7.4": "Dici 'io sono' in relazione alla materia, o dici 'io sono' senza materia? ",
   "sn22.89:8.10": "Basta, amico Dāsaka, cos'e' questo gioco di andare e venire? ",
   "sn22.89:8.11": "reggendomi su un bastone ??? ",
   "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani ",
