--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -25,7 +25,7 @@
   "sn22.89:9.10": "Certamente non dico 'io sono' in relazione alla materia, ne' dico 'io sono' senza materia ",
   "sn22.89:9.15": "x ",
   "sn22.89:10.1": "E' come l'odore di un loto blu, rosso, o bianco. ",
-  "sn22.89:10.2": "Chi potrebbe dire questo: 'l'odore del petalo, o l'odore del colore, o l'odore del pistillo,' o correttamente potrebbe dire parlando questo? ",
+  "sn22.89:10.2": "Potrebbe uno correttamente parlare dell'odore del petalo, o dell'odore del colore, o dell'odore del pistillo? ",
   "sn22.89:10.4": "E quindi come dovreste rispondere correttamente? ",
   "sn22.89:10.5": "l'odore del fiore, e' il modo corretto, ",
   "sn22.89:10.6": "per questo io dico che la materia non e' me... ",
