Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "sn22.56:1.5": "Fino a quando non compresi queste cinque cataste ardenti, così come sono ?in quattro cicli? non.... "
+  "sn22.56:1.5": "Fino a quando non compresi queste cinque cataste ardenti, così come sono ?in quattro cicli? non.... ",
+  "sn22.56:2.1": "E come ?quattro cicli? "
 }
