Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti94:2.1": "Un cercatore dovrebbe esaminare da vicino in accordo con la realtà che la propria coscienza non sia distratta e dispersa all’esterno, ne’ intrappolata all’interno, e che non si agiti perchè non si impossessa di nulla. ",
+  "iti94:2.1": "Un cercatore dovrebbe esaminare da vicino in accordo con la realtà che la propria coscienza non sia distratta e dispersa all’esterno, ne’ intrappolata all’interno, e che non si agiti perchè non si impossessa di nulla (e' bruciata/arsa da nulla??). ",
   "iti94:2.2": "Quando c’è consapevolezza che la coscienza non è distratta e dispersa all’esterno, ne’ è intrappolata all’interno, ne’ si agita perchè non si impossessa di nulla, non c’è più futura generazione di nascita, vecchiaia, morte, sofferenza. ",
   "iti94:3.1": "Per il cercatore che ha abbandonato sette catene,* ",
   "iti94:3.2": "ha reciso il conduttore, ",
