Translations by sujato to translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
@@ -62,7 +62,7 @@
   "mn80:12.7": "Touches known by the body that are likable, desirable, agreeable, pleasant, sensual, and arousing. ",
   "mn80:12.8": "These are the five kinds of sensual stimulation. ",
   "mn80:13.1": "The pleasure and happiness that arises from these five kinds of sensual stimulation is called sensual pleasure. ",
-  "mn80:13.2": "So they say: ‘From the senses comes sensual pleasure. From sensual pleasure comes the best kind of sensual pleasure, which is said to be the best thing there.’” ",
+  "mn80:13.2": "So they say: ‘From the senses comes sensual pleasure. From sensual pleasure comes the best kind of sensual pleasure, which is said to be the best of these.’” ",
   "mn80:14.1": "When he said this, Vekhanasa said to the Buddha, ",
   "mn80:14.2": "“It’s incredible, Master Gotama, it’s amazing! ",
   "mn80:14.3": "How well said this was by Master Gotama! ",
