Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -13,5 +13,6 @@
   "sn22.56:6.3": "Sensazioni nate dal contatto degli occhi, delle orecchie, del naso, della lingua, del corpo, della mente. ",
   "sn22.56:6.5": "Con il sorgere del contatto, c'e' il sorgere della sensazione ",
   "sn22.56:6.6": "con la fine del contatto, c'e' la fine della sensazione. ",
-  "sn22.56:6.7": "La via verso la fine della sensazione... "
+  "sn22.56:6.7": "La via verso la fine della sensazione... ",
+  "sn22.56:9.1": "E che cos'e' la percezione? "
 }
