Translations by sujato to translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json
@@ -258,7 +258,7 @@
   "thig16.1:64.2": "what good are sensual pleasures in which is old age? ",
   "thig16.1:64.3": "All rebirths everywhere ",
   "thig16.1:64.4": "are bonded to death and sickness. ",
-  "thig16.1:65.1": "This is freedom from old age and death! ",
+  "thig16.1:65.1": "This is freedom from old age, freedom from death! ",
   "thig16.1:65.2": "This is freedom from old age and death, the sorrowless state! ",
   "thig16.1:65.3": "Free of enmity, unconstricted, ",
   "thig16.1:65.4": "faultless, fearless, without tribulations. ",
