--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -1,3 +1,4 @@
 {
-  "mn6:0.1": "Discours de Longueur Moyenne 6 "
+  "mn6:0.1": "Discours de Longueur Moyenne 6 ",
+  "mn6:0.2": "On pourrait souhaiter "
 }
