Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -1,4 +1,5 @@
 {
   "mn6:0.1": "Discours de Longueur Moyenne 6 ",
-  "mn6:0.2": "On pourrait souhaiter "
+  "mn6:0.2": "On pourrait souhaiter ",
+  "mn6:1.1": "Ainsi ai-je entendu. "
 }
